--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             background-color: #f4f4f4;
             padding: 20px;
         }
+
         h1, h2 {
             text-align: center;
         }
+
         #log {
             background: #fff;
             border: 1px solid #ccc;
@@ -22,11 +24,13 @@
             overflow-y: auto;
             margin-bottom: 20px;
         }
+
         .status-bar {
             display: flex;
             justify-content: space-around;
             margin-bottom: 20px;
         }
+
         .status-bar div {
             background: #fff;
             border: 1px solid #ccc;
@@ -34,10 +38,12 @@
             width: 30%;
             text-align: center;
         }
+
         .actions, .hand {
             text-align: center;
             margin-top: 20px;
         }
+
         button {
             margin: 5px;
             padding: 10px 20px;
@@ -47,17 +53,29 @@
 </head>
 <body>
     <h1>Euphoria: Clash of Strategies</h1>
+
+    <!-- Registro degli eventi -->
     <div id="log"></div>
+
+    <!-- Stato dei giocatori -->
     <div class="status-bar">
         <div id="player1-status"></div>
         <div id="player2-status"></div>
         <div id="segnalino-velocita"></div>
     </div>
+
+    <!-- Carte in mano -->
     <div class="hand" id="hand"></div>
-    <div class="actions" id="actions"></div>
+
+    <!-- Azioni disponibili -->
+    <div class="actions" id="actions">
+        <button onclick="dionisSeiIlMioMaestro()">Dionis sei il mio maestro!</button>
+    </div>
 
     <script>
-        let mazzoIniziale = [
+        /* Dati iniziali del mazzo */
+        const mazzoIniziale = [
+            // Messaggeri
             { tipo: "Messaggero", nome: "Bilanciato1", categoria: "Bilanciato", vita: 1, attacco: 0, velocita: 0 },
             { tipo: "Messaggero", nome: "Bilanciato2", categoria: "Bilanciato", vita: 1, attacco: 0, velocita: 0 },
             { tipo: "Messaggero", nome: "Bilanciato3", categoria: "Bilanciato", vita: 1, attacco: 0, velocita: 0 },
@@ -68,6 +86,7 @@
             { tipo: "Messaggero", nome: "Attaccante2", categoria: "Attaccante", vita: 1, attacco: 0.5, velocita: 0 },
             { tipo: "Messaggero", nome: "Velocista1", categoria: "Velocista", vita: 1, attacco: 0, velocita: 0.5 },
             { tipo: "Messaggero", nome: "Velocista2", categoria: "Velocista", vita: 1, attacco: 0, velocita: 0.5 },
+            // Carte Speciali
             { tipo: "Carta", nome: "+1 Vita Permanente" },
             { tipo: "Carta", nome: "+1 Vita Permanente" },
             { tipo: "Carta", nome: "+1 Attacco Temporaneo" },
@@ -79,156 +98,50 @@
             { tipo: "Carta", nome: "Scambia Messaggero" }
         ];
 
-        let mazzoUnificato, giocatore1, giocatore2, segnalinoVelocita, turno;
-        let logDiv = document.getElementById("log");
-        let actionsDiv = document.getElementById("actions");
-        let handDiv = document.getElementById("hand");
-
-        function scriviLog(messaggio) {
-            logDiv.innerHTML += `<p>${messaggio}</p>`;
-            logDiv.scrollTop = logDiv.scrollHeight;
+        /* Funzioni di base */
+        function mescolaMazzo(mazzo) {
+            return mazzo.sort(() => Math.random() - 0.5);
         }
 
-        function resetGioco() {
-            mazzoUnificato = [...mazzoIniziale];
-            mazzoUnificato.sort(() => Math.random() - 0.5);
-
-            giocatore1 = { nome: "Dionis", puntiVita: 3, risorseAlfa: 3, risorseBeta: 3, mano: [], messaggeroAttivo: null };
-            giocatore2 = { nome: "Edo", puntiVita: 3, risorseAlfa: 3, risorseBeta: 3, mano: [], messaggeroAttivo: null };
-            segnalinoVelocita = null;
-            turno = 0;
-
-            scriviLog("Il gioco è stato resettato.");
-            pescaIniziale(giocatore1);
-            pescaIniziale(giocatore2);
-            assegnaSegnalinoVelocita();
-            aggiornaStato();
-            mostraScelte();
+        function pescaCarta(mazzo) {
+            if (mazzo.length === 0) return null;
+            return mazzo.pop();
         }
 
+        /* Stato iniziale del gioco */
+        let mazzo = mescolaMazzo([...mazzoIniziale]);
+        let giocatore1 = { nome: "Dionis", puntiVita: 3, risorseAlfa: 3, risorseBeta: 3, mano: [], messaggeroAttivo: null };
+        let giocatore2 = { nome: "Edo", puntiVita: 3, risorseAlfa: 3, risorseBeta: 3, mano: [], messaggeroAttivo: null };
+        let turno = 0;
+        let segnalinoVelocita = null;
+
+        /* Funzioni di aggiornamento stato */
         function aggiornaStato() {
-            const player1Status = `
+            document.getElementById("player1-status").innerHTML = `
                 <h3>${giocatore1.nome}</h3>
                 <p>Punti Vita: ${giocatore1.puntiVita}</p>
-                <p>Risorse Alfa: ${giocatore1.risorseAlfa}</p>
-                <p>Risorse Beta: ${giocatore1.risorseBeta}</p>
                 <p>Messaggero Attivo: ${giocatore1.messaggeroAttivo ? giocatore1.messaggeroAttivo.nome : "Nessuno"}</p>
             `;
-            const player2Status = `
+            document.getElementById("player2-status").innerHTML = `
                 <h3>${giocatore2.nome}</h3>
                 <p>Punti Vita: ${giocatore2.puntiVita}</p>
-                <p>Risorse Alfa: ${giocatore2.risorseAlfa}</p>
-                <p>Risorse Beta: ${giocatore2.risorseBeta}</p>
                 <p>Messaggero Attivo: ${giocatore2.messaggeroAttivo ? giocatore2.messaggeroAttivo.nome : "Nessuno"}</p>
             `;
-            const velocitaStatus = `<h3>Segnalino Velocità</h3><p>Attuale: ${segnalinoVelocita ? segnalinoVelocita.nome : "Nessuno"}</p>`;
-            document.getElementById("player1-status").innerHTML = player1Status;
-            document.getElementById("player2-status").innerHTML = player2Status;
-            document.getElementById("segnalino-velocita").innerHTML = velocitaStatus;
         }
 
-        function pescaIniziale(giocatore) {
-            while (mazzoUnificato.length > 0) {
-                const carta = mazzoUnificato.pop();
-                if (carta.tipo === "Messaggero") {
-                    giocatore.messaggeroAttivo = carta;
-                    scriviLog(`${giocatore.nome} pesca ${carta.nome}.`);
-                    break;
-                } else {
-                    giocatore.mano.push(carta);
-                }
-            }
-            mazzoUnificato.sort(() => Math.random() - 0.5);
+        /* Log degli eventi */
+        function aggiornaLog(messaggio) {
+            document.getElementById("log").innerHTML += `<p>${messaggio}</p>`;
         }
 
-        function assegnaSegnalinoVelocita() {
-            const velocita1 = giocatore1.messaggeroAttivo ? giocatore1.messaggeroAttivo.velocita : 0;
-            const velocita2 = giocatore2.messaggeroAttivo ? giocatore2.messaggeroAttivo.velocita : 0;
-            if (velocita1 > velocita2) {
-                segnalinoVelocita = giocatore1;
-            } else if (velocita2 > velocita1) {
-                segnalinoVelocita = giocatore2;
-            } else {
-                segnalinoVelocita = Math.random() > 0.5 ? giocatore1 : giocatore2;
-            }
-            scriviLog(`${segnalinoVelocita.nome} riceve il Segnalino Velocità.`);
+        /* Azione speciale: Dionis sei il mio maestro! */
+        function dionisSeiIlMioMaestro() {
+            aggiornaLog("Karlo Drogo usa Luna Piena ma si incula da solo.");
         }
 
-        function mostraScelte() {
-            const giocatoreAttivo = turno % 2 === 0 ? giocatore1 : giocatore2;
-            handDiv.innerHTML = `
-                <h3>Mano di ${giocatoreAttivo.nome}</h3>
-                ${giocatoreAttivo.mano.map(carta => `<p>${carta.nome}</p>`).join("")}
-            `;
-            actionsDiv.innerHTML = `
-                <h3>Turno di ${giocatoreAttivo.nome}</h3>
-                <button onclick="allocaRisorsa('alfa')">Allocare Risorsa Alfa</button>
-                <button onclick="allocaRisorsa('beta')">Allocare Risorsa Beta</button>
-                <button onclick="attivaCarta()">Attivare una Carta</button>
-                <button onclick="scambiaMessaggero()">Scambiare Messaggero</button>
-                <button onclick="attacca()">Attaccare</button>
-                <button onclick="resetGioco()">Restart</button>
-            `;
-        }
-
-        function allocaRisorsa(tipo) {
-            scriviLog(`${tipo === 'alfa' ? 'Risorsa Alfa' : 'Risorsa Beta'} allocata!`);
-            turno++;
-            aggiornaStato();
-            mostraScelte();
-        }
-
-        function attivaCarta() {
-            scriviLog("Carta attivata! (logica da implementare)");
-            turno++;
-            aggiornaStato();
-            mostraScelte();
-        }
-
-        function scambiaMessaggero() {
-            const giocatoreAttivo = turno % 2 === 0 ? giocatore1 : giocatore2;
-            if (giocatoreAttivo === segnalinoVelocita || giocatoreAttivo.mano.some(c => c.nome === "Scambia Messaggero")) {
-                scriviLog(`${giocatoreAttivo.nome} scambia il Messaggero attivo.`);
-                turno++;
-                aggiornaStato();
-                mostraScelte();
-            } else {
-                scriviLog("Non puoi scambiare il Messaggero in questo momento!");
-            }
-        }
-
-        function attacca() {
-            const giocatoreAttivo = turno % 2 === 0 ? giocatore1 : giocatore2;
-            const avversario = turno % 2 === 0 ? giocatore2 : giocatore1;
-
-            if (!giocatoreAttivo.messaggeroAttivo || !avversario.messaggeroAttivo) {
-                scriviLog("Attacco non possibile: uno dei giocatori non ha un Messaggero attivo.");
-                return;
-            }
-
-            const danno = giocatoreAttivo.messaggeroAttivo.attacco;
-            avversario.messaggeroAttivo.vita -= danno;
-
-            if (avversario.messaggeroAttivo.vita <= 0) {
-                avversario.puntiVita -= 1;
-                scriviLog(`${giocatoreAttivo.nome} sconfigge il Messaggero di ${avversario.nome}!`);
-                avversario.messaggeroAttivo = null;
-            } else {
-                scriviLog(`${giocatoreAttivo.nome} infligge ${danno} danni a ${avversario.nome}!`);
-            }
-
-            if (avversario.puntiVita <= 0) {
-                scriviLog(`${giocatoreAttivo.nome} ha vinto la partita!`);
-                actionsDiv.innerHTML = `<h2>${giocatoreAttivo.nome} è il vincitore!</h2>`;
-                return;
-            }
-
-            turno++;
-            aggiornaStato();
-            mostraScelte();
-        }
-
-        resetGioco();
+        /* Inizio gioco */
+        aggiornaLog("Il mazzo è stato preparato con 19 carte.");
+        aggiornaStato();
     </script>
 </body>
 </html>
