--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Euphoria: Clash of Strategies</title>
+    <title>Euphoria: Clash of Messangers</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-    <h1>Euphoria: Clash of Strategies</h1>
+    <h1>Euphoria: Clash of Messangers</h1>
 
     <!-- Registro degli eventi -->
     <div id="log"></div>
@@ -69,7 +69,7 @@
 
     <!-- Azioni disponibili -->
     <div class="actions" id="actions">
-        <button onclick="dionisSeiIlMioMaestro()">Dionis sei il mio maestro!</button>
+        <button onclick="dionisSeiIlMioMaestro()">Luna Piena!</button>
     </div>
 
     <script>
